[gd_scene load_steps=7 format=3 uid="uid://diigdxkxkk1w0"]

[ext_resource type="Script" path="res://gui/level_gui/level_gui.gd" id="1_vll3t"]
[ext_resource type="PackedScene" uid="uid://bwhux862noe02" path="res://gui/framed_dialog/framed_dialog.tscn" id="2_po317"]
[ext_resource type="PackedScene" uid="uid://bduukq086unko" path="res://gui/ability_button/ability_button.tscn" id="2_vh25o"]
[ext_resource type="PackedScene" uid="uid://bi8sfy7akeroo" path="res://gui/size_limiter.tscn" id="3_86yln"]
[ext_resource type="Shader" path="res://materials/canvas/ui_dialog.gdshader" id="3_ath86"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6pnse"]
shader = ExtResource("3_ath86")
shader_parameter/size = Vector2(260, 190)
shader_parameter/overlay = Color(0, 0, 0, 1)
shader_parameter/border_tint = Vector4(0, 0, 0, 0)
shader_parameter/bg_opacity = 0.92
shader_parameter/grayscale = 1.0

[node name="LevelGui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_vll3t")

[node name="CharactersColumn" type="VBoxContainer" parent="."]
layout_mode = 1
offset_top = 80.0
offset_right = 115.0
offset_bottom = 514.0
size_flags_horizontal = 8
size_flags_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="Dialogs" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_left = 109.0
offset_top = 80.0
offset_right = 109.0
offset_bottom = 800.0
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -212.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="GuiBottom" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Layoutpush" type="Control" parent="MarginContainer/GuiBottom"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 8

[node name="ActionButtons" type="GridContainer" parent="MarginContainer/GuiBottom"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 8
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 9

[node name="Button" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2
text = "Spark"

[node name="Button2" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button3" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button4" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button5" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button6" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button7" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button8" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button9" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button10" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button11" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button12" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button13" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button14" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button15" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button16" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button17" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="Button18" parent="MarginContainer/GuiBottom/ActionButtons" instance=ExtResource("2_vh25o")]
layout_mode = 2

[node name="SizeLimiter" parent="MarginContainer/GuiBottom" instance=ExtResource("3_86yln")]
layout_mode = 2
size_flags_horizontal = 3
max_width = 24
viewport_units = true

[node name="MessagesFrame" parent="MarginContainer/GuiBottom/SizeLimiter" instance=ExtResource("2_po317")]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_6pnse")
clip_contents = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 0
mouse_force_pass_scroll_events = false
grayscale = 1.0
bg_opacity = 0.92
resizable_top = true

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/GuiBottom/SizeLimiter/MessagesFrame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/GuiBottom/SizeLimiter/MessagesFrame/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="MessageHolder" type="VBoxContainer" parent="MarginContainer/GuiBottom/SizeLimiter/MessagesFrame/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[connection signal="resize_top" from="MarginContainer/GuiBottom/SizeLimiter/MessagesFrame" to="." method="_on_messages_frame_resize_top"]
